test/JDBC/expected/BABEL-1113.out
create table cctab (a int, b as a*10, c int)
go
insert cctab values (1,2)
go
~~ROW COUNT: 1~~

select * from cctab
go
~~START~~
int#!#int#!#int
1#!#10#!#2
~~END~~


-- Expect Error
insert into cctab values (1,2,3)
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: INSERT has more expressions than target columns)~~


create table cctab2 (a int identity, b as a+10, c int)
go
insert cctab2 values (1)
go
~~ROW COUNT: 1~~

select * from cctab2
go
~~START~~
int#!#int#!#int
1#!#11#!#1
~~END~~


create table cctab3 (a int, c int, b as a*10)
go
insert cctab3 values (1,2)
go
~~ROW COUNT: 1~~

select * from cctab3
go
~~START~~
int#!#int#!#int
1#!#2#!#10
~~END~~


create table cctab4 (a int, c int, b as a*10, d as c*20)
go
insert cctab4 values (1,2)
go
~~ROW COUNT: 1~~

select * from cctab4
go
~~START~~
int#!#int#!#int#!#int
1#!#2#!#10#!#40
~~END~~


DROP TABLE cctab, cctab2, cctab3, cctab4
go
